[gd_scene load_steps=13 format=2]

[ext_resource path="res://GUI/wooden_ui.png" type="Texture" id=1]
[ext_resource path="res://GUI/FutilePro.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GUI/GameOverMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.560784, 0.337255, 0.231373, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.4, 0.223529, 0.192157, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.4, 0.223529, 0.192157, 1 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.560784, 0.337255, 0.231373, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.4, 0.223529, 0.192157, 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=11]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Bg/NewHighScoreText:custom_colors/default_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.67451, 0.196078, 0.196078, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GameOverMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -192.0
margin_bottom = -128.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="NinePatchRect" parent="."]
margin_right = 128.0
margin_bottom = 112.0
texture = ExtResource( 1 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="Bg"]
margin_top = 3.0
margin_right = 128.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.67451, 0.196078, 0.196078, 1 )
text = "GAME OVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Bg"]
margin_top = 27.0
margin_right = 128.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.560784, 0.337255, 0.231373, 1 )
text = "Score: 123"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="Bg"]
margin_left = 24.0
margin_top = 56.0
margin_right = 104.0
margin_bottom = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="Bg/Buttons"]
margin_right = 80.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 20 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 4 )
text = "Restart"

[node name="Quit" type="Button" parent="Bg/Buttons"]
margin_top = 24.0
margin_right = 80.0
margin_bottom = 44.0
rect_min_size = Vector2( 80, 20 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 4 )
text = "Quit"

[node name="NewHighScoreText" type="RichTextLabel" parent="Bg"]
margin_top = -32.0
margin_right = 128.0
margin_bottom = 8.0
custom_fonts/normal_font = SubResource( 10 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[wave amp=16 freq=8][center]New High Score![/center][/wave]"
text = "New High Score!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 11 )
[connection signal="pressed" from="Bg/Buttons/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Bg/Buttons/Quit" to="." method="_on_Quit_pressed"]
